--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,8 @@ cargo = { path = "src/tools/cargo" }
 # `rustfmt` executable are the same exact version).
 rustfmt-nightly = { path = "src/tools/rustfmt" }
 
+spellbound = { path = "../spellbound" }
+
 # See comments in `src/tools/rustc-workspace-hack/README.md` for what's going on
 # here
 rustc-workspace-hack = { path = 'src/tools/rustc-workspace-hack' }
