--- a/src/librustdoc/Cargo.toml
+++ b/src/librustdoc/Cargo.toml
@@ -9,10 +9,11 @@ name = "rustdoc"
 path = "lib.rs"
 
 [dependencies]
-pulldown-cmark = { version = "0.7", default-features = false }
+itertools = "0.8"
 minifier = "0.0.33"
+pulldown-cmark = { version = "0.7", default-features = false }
 rayon = { version = "0.3.0", package = "rustc-rayon" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+spellbound = "0.1.1"
 tempfile = "3"
-itertools = "0.8"
